--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,3 +18,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+.toggle-checkbox:checked {
+  @apply: right-0 border-green-400;
+  right: 0;
+  border-color: #68d391;
+}
+.toggle-checkbox:checked + .toggle-label {
+  @apply: bg-green-400;
+  background-color: #68d391;
+}
